@@ -1,8 +1,0 @@
-<% sidebar do -%>
-<div id="first">
-  <p>First Sidebar</p>
-</div>
-<div id="second">
-  <p>Second Sidebar</p>
-</div>
-<% end %>
