@@ -1,2 +1,0 @@
-<title>This is the title</title>
-<%= yield :sidebar %>
